--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body{
+    background-image: url('ffflux.svg');
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    @apply bg-no-repeat bg-cover font-mono;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+.section{
+    @apply lg:flex lg:h-screen lg:items-center lg:justify-center lg:flex-col;
+}
+
+.bubble{
+    @apply 
+    rounded-full bg-blue-500 shadow-lg bg-gradient-to-t from-rose-400 via-fuchsia-500 to-indigo-500 
+    w-28 h-28 font-bold text-white hover:scale-105 hover:-translate-y-1 transition-all;
+}
+
+.contact-link{
+    @apply hover:scale-105 hover:-translate-y-1 transition-all;
+}
